# GalvoWeb2.0

./: .eslintrc.js  .gitignore  .gitmodules  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.cjs
.vim/: coc-settings.json
src/: index.html  index.tsx
src-wasm/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  copy.cpp  index.cpp  index.js  index.wasm
src/component/: AddNode.tsx  CameraCalibratedCamera.tsx  Canvas.tsx  CanvasIdSelector.tsx  CopyCanvas.tsx  Enter.tsx  GalvoHomography.tsx  GalvoOperations.tsx  GalvoSequencer.tsx  Header.tsx  Home.tsx  Node.tsx  Nodes.tsx  Operation.tsx  OperationForSequence.tsx  Operations.tsx  OperationsForSequence.tsx  OriginalCameraVideo.tsx  ResolutionSelector.tsx  SelectBox.tsx  Sequencer.tsx  SerialDevice.tsx
src/module/: camera.ts  customEvent.ts  loaclStorage.ts  teencyInterface.ts  use2dCanvas.ts  useCounter.ts  useFpsOptimization.ts  useInterval.ts  useNode.ts  useNodeMap.ts  useStore.ts
src/store/: index.ts
src/store/ctx/: action.ts  actionTypes.ts  hooks.ts  index.ts
src/util/: calcHomography.ts  calibrateCamera.ts  canvas.ts  color.ts  index.ts  math.ts  sequencer.ts
src/util/operation/: hooks.ts  index.ts  polygon.ts
src/wasm/: index.ts  memory.ts  wrapper.ts
teensy/: README.md  platformio.ini
teensy/src/: main.cpp
